1. 自定义假人名称时 uuid 顺序生成了 2. 优化一些代码